# appCliente

./: .gitignore  Configuracion appCliente-webapp.txt  Configuracion para appcliente.txt  Instrucciones instalacion y uso.txt  NOTAS_ACERCA_APPCLIENTE.txt  NOTAS_ACERCA_WEBAPP.txt  PASOS PARA DEMOSTRACION.txt  README.md  clases-requerimientos.txt
Instrucciones para configuracion APIs Geocoding/: Instrucciones configuracion APIs de direcciones.txt  script-agregar-rango.sql
backup appCliente modules/: DB_CONFIRMADAS.json  DB_MUESTRAS_LOCALES_17-04-2017.json  DB_MUESTRAS_LOCALES_19-04-2017.json  TODOS-PENDIENTES.txt  constantes.py  log.txt  main.py  utils.py
backup appCliente modules/otras_pruebas/capturador_RGB/: CMakeCache.txt  CMakeLists.txt  Makefile  calibkinect.py  cmake_install.cmake  openniViewer (copia).cpp
configuracion_server/: Configuracion_Codeigniter.txt  foo2.csv  prueba_python_php.py
instrucciones_conectar_gps_con_usb/: gpsd.py
modules/: 1  DB_CONFIRMADAS.json  DB_MUESTRAS_LOCALES.json  DB_MUESTRAS_LOCALES_18-04-2017.json  DB_MUESTRAS_LOCALES_20-04-2017.json  DB_MUESTRAS_LOCALES_21-04-2017.json  DB_MUESTRAS_LOCALES_22-04-2017.json  Geoposiciones.txt  TODOS-PENDIENTES.txt  bitacora de prueba conexion.txt  constantes.py  demo_scrolling.py  generarRecorridoArtficial.py  latitudesFalsas (copia).json  latitudesFalsas.json  log ERROR CAMERA BUSY!.txt  log.txt  logERROR.txt  main.py  myjson.json  rec michael jones  rec michael jones.index  rec michael jones.tmp  recorrido con tres capturas.rec.index  screenredimensionable.py  see_capture.sh  submenuscreen.py  (+2 more)
(+278 files in other folders)
